# scheduler-service

./: .gitignore  .pdm.toml  .travis.yml  Dockerfile  LICENSE  README.md  app.py  config.py  deploy.sh  manage.py  pyproject.toml  runapp.py
app/: __init__.py  mail.py  minixs.py
app/api/: __init__.py
app/api/v1/: __init__.py  authentication.py  sina.py  users.py
app/models/: __init__.py  sina.py  user.py  users.py
app/service/spider/sina_spider/: __init__.py  cookies.py  spider.py  user_agent.py
migrations/versions/: dfa7d259be4_.py
old/: .codeclimate.yml  .gitignore  .travis.yml  docker-compose.yml  id_rsa.enc
old/app/: __init__.py  mail.py
old/app/api/: __init__.py
old/app/api/v1/: authentication.py  users.py
old/app/models/: client.py  grant.py  token.py
old/migrations/versions/: 13841d3fbfdb_.py  3f13ffdc44e8_.py
old/nginx/: nginx.conf
requirements/: common.txt  test.txt
resources/spider/: spider.py
scheduler_service/: __init__.py  config.py  manage.py
scheduler_service/api/: __init__.py  decorators.py  init_server.py
scheduler_service/api/v1/: __init__.py
scheduler_service/api/v1/task/: __init__.py  main.py  url.py
scheduler_service/api/v1/user/: __init__.py  main.py  token.py
scheduler_service/app/: __init__.py
scheduler_service/app/api/: decorators.py
scheduler_service/app/api/v1/: __init__.py
scheduler_service/app/api/v1/task/: main.py
scheduler_service/app/api/v1/user/: main.py
scheduler_service/app/models/: __init__.py
scheduler_service/models/: __init__.py  mixin.py  task.py  user.py
scheduler_service/service/: __init__.py  request.py
tests/: conftest.py  const.py  test_task.py  test_user.py  test_user_model.py
