[tool.poetry]
name = "scheduler-service"
version = "0.1.0"
description = ""
authors = ["FX-HAO <haofxpro@gmail.com> & CoCongV <cong.lv.yx@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.9"
celery = "^4.3"
aioredis = "^1.3"
click = "^7.0"
databases = "^0.2.6"
asyncpg = "^0.19.0"
orm = "^0.1.5"
passlib = "^1.7"
pyjwt = "^1.7"
ipython = "^7.9"
psycopg2 = "^2.8"
arq = "^0.18.4"
motor = "^2.1.0"
aiohttp = "^3.6.2"
prompt_toolkit = "2.0.10"
cchardet = "^2.1.5"
aiodns = "^2.0.0"
brotlipy = "^0.7.0"
pytest = "^5.3.2"
sanic-restful = "^0.0.9"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
rope = "^0.14.0"
requests = "^2.22.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
pytest-mock = "^2.0.0"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.scripts]
scheduler-cli = "scheduler_service.manage:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

