[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CoCongV", email = "cong.lv.yx@gmail.com"},
]
dependencies = [
    "sanic~=21.3",
    "aioredis~=1.3",
    "click~=8.0",
    "databases~=0.4",
    "asyncpg~=0.23",
    "orm~=0.1",
    "passlib~=1.7",
    "pyjwt~=2.1",
    "arq~=0.20",
    "motor~=2.4",
    "aiohttp~=3.7",
    "prompt-toolkit~=3.0",
    "cchardet~=2.1",
    "aiodns~=3.0",
    "brotlipy~=0.7",
    "sanic-restful~=0.1",
    "Ipython~=7.24",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint~=2.8",
    "rope~=0.19",
    "requests~=2.25",
    "pytest-cov~=2.12",
    "pytest-sugar~=0.9",
    "pytest-mock~=3.6",
    "pytest~=6.2",
    "yapf~=0.31",
    "pytest-sanic~=1.7",
    "uvicorn~=0.14",
    "flake8~=3.9",
]
